feat : update lambda to work with java 21